--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -6,6 +6,7 @@
 	justify-content: center;
 	height: 100vh;
 	width: 100vw;
+	padding: 0 30px;
 }
 @supports (height: 100dvh){
 	.main{
@@ -22,7 +23,8 @@
 	border: none;
 	border-bottom: 2px solid #BFCED7;
 	padding: 10px 0;
-	width: 600px;
+	max-width: 600px;
+	width: 100%;
 }
 
 .search::placeholder{
@@ -31,11 +33,13 @@
 
 .resultBox{
 	background: #E4E6EC;
-	border-radius: 10px;
+	border-radius: 0px 0px 10px 10px;
 	box-shadow: 0 0 20px 0 rgba(200, 213, 255, 0.1);
 	padding: 20px;
-	margin: 20px 0;
-	width: 600px;
+	max-width: 600px;
+	width: 100%;
+	max-height: 300px;
+	overflow-y: auto;
 }
 
 .searchNode{
@@ -43,7 +47,7 @@
 	border-radius: 5px;
 	cursor: pointer;
 }
-.searchNode:hover{
+.selected, .searchNode:hover{
 	background: #D8DCE6;
 }
 
